cmake_minimum_required(VERSION 3.12)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
project(ui_proposal)
set(CMAKE_CXX_STANDARD 17)
set(UI_IMPLEMENTATIONS sdl2)
# set(UI_IMPLEMENTATIONS sfml)
# set(UI_IMPLEMENTATIONS sdl2 sfml)
add_subdirectory(implementations)
add_subdirectory(samples)
